--- a/.gitignore
+++ b/.gitignore
@@ -91,9 +91,11 @@ ENV/
 .ropeproject
 
 # Downloaded datasets
-egohands/
-egohands_data.zip
-images/test/
-images/train/
+**/egohands/
+**/egohands_data.zip
+**/images/test/
+**/images/train/
 *.mp4
 *.apk
+*.zip
+*.jpg
